--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="map"></div>
+    <form id="form">
+      <input id="search" type="text " />
+      <button>検索</button>
+    </form>
 
     <script src="./main.js"></script>
     <script
