--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div id="map"></div>
     <form id="form">
-      <input id="search" type="text " />
-      <button>検索</button>
+      <input id="search" type="text" name="place" />
+      <button type="submit">検索</button>
     </form>
+    <p>
+      検索条件にヒットする店舗が30件より多い場合はエラーになり「条件を絞り込んでください。」とメッセージがアラートされます。条件を追加して30件以内の店緒がヒットするようにしてください。店舗名や住所、電話番号等の一部がある程度わかっている場合にご利用いただける仕様となっております。
+    </p>
 
     <script src="./main.js"></script>
     <script
