ヒット件数追加

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <input id="search" type="text" name="place" />
       <button type="submit">検索</button>
     </form>
-    <div id="hit-number"></div>
+    <p id="hit-number"></p>
     <p>
       検索条件にヒットする店舗が30件より多い場合はエラーになり「条件を絞り込んでください。」とメッセージがアラートされます。条件を追加して30件以内の店緒がヒットするようにしてください。店舗名や住所、電話番号等の一部がある程度わかっている場合にご利用いただける仕様となっております。
     </p>
